<resources>
    <string name="app_name">Draft</string>
    <string name="discriminant">Discriminant</string>
    <string name="hint1">enter a</string>
    <string name="hint2">enter b</string>
    <string name="hint3">enter c</string>
    <string name="answer">D equals:</string>
    <string name="btn_text">solve</string>
    <string name="data">Discriminant data:</string>
    <string name="copyres">copy result</string>
    <string name="Next">next solve</string>
    <string name="name2">Discriminant solution</string>
    <string name="btn_back">back</string>
    <string name="ifpositive">if D>0</string>
    <string name="ifequals">if D=0</string>
    <string name="hint4">enter b</string>
    <string name="hint5">enter a</string>
    <string name="hint6">enter D</string>
    <string name="solution">solve</string>
    <string name="answer2">Answer:</string>
    <string name="x1x2">x1, x2:</string>
    <string name="x">x:</string>
</resources>