<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".ThirdActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="@string/btn_back"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:id="@+id/back2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifequals"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputb2"
        android:hint="@string/hint4"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputa2"
        android:hint="@string/hint5"
        android:layout_marginTop="190dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="@string/solution"
        android:layout_marginTop="250dp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:id="@+id/solve23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerx"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginTop="450dp"
        android:layout_marginStart="50dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="@string/copyres"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:id="@+id/copy22"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>